# template-django-react-vite-ant

./: .gitignore  LICENSE  README.md  openapi.dashboard.json  openapi.portal.json
backend/: pyproject.toml
backend/apps/api/dashboard/: serializers.py  urls.py  views.py
backend/apps/api/portal/: serializers.py  urls.py  views.py
backend/apps/core/: admin.py  models.py  pagination.py
backend/apps/core/management/commands/: generate_schemas.py  seed_data.py
backend/apps/core/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
dashboard/: biome.json  index.html  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.js
dashboard/src/: main.tsx
dashboard/src/app/: provider.tsx
dashboard/src/app/routes/: index.tsx
dashboard/src/components/auth/: ProtectedRoute.tsx
dashboard/src/components/layout/: MainLayout.tsx
dashboard/src/components/ui/: SkeletonTable.tsx
dashboard/src/features/auth/components/: LoginPage.tsx
dashboard/src/features/auth/hooks/: useAuth.ts
dashboard/src/features/auth/stores/: authStore.ts
dashboard/src/features/posts/components/: PostListPage.tsx
dashboard/src/features/posts/hooks/: usePostListPage.ts
dashboard/src/features/posts/stores/: postFilterStore.tsx
dashboard/src/lib/: axios.ts
dashboard/src/routes/: paths.ts
dashboard/src/stores/: index.ts
dashboard/src/stores/slices/: authSlice.ts  uiSlice.ts
portal/: index.html  orval.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
portal/src/: App.tsx  main.tsx
portal/src/app/: provider.tsx
portal/src/lib/: axios.ts
(+2 files in other folders)
